# directx-sdk-samples

./: .gitattributes  .gitignore  BuildAllSolutions.targets  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SECURITY.md  nugetrestore.cmd  t.cmd
AdaptiveTessellationCS40/: AdaptiveTessellationCS40.cpp  AdaptiveTessellationCS40_2012.sln  AdaptiveTessellationCS40_2012.vcxproj  AdaptiveTessellationCS40_2012.vcxproj.filters  AdaptiveTessellationCS40_2013.sln  AdaptiveTessellationCS40_2013.vcxproj  AdaptiveTessellationCS40_2015.sln  AdaptiveTessellationCS40_2015.vcxproj  AdaptiveTessellationCS40_2015_Win10.sln  AdaptiveTessellationCS40_2015_Win10.vcxproj  AdaptiveTessellationCS40_2015_Win10.vcxproj.filters  AdaptiveTessellationCS40_2017_Win10.sln  AdaptiveTessellationCS40_2017_Win10.vcxproj  AdaptiveTessellationCS40_2019_Win10.sln  AdaptiveTessellationCS40_2019_Win10.vcxproj  CMakeLists.txt  Readme.docx  Render.hlsl  ScanCS.cpp  ScanCS.h  ScanCS.hlsl  TessellatorCS40.cpp  TessellatorCS40.h  TessellatorCS40_EdgeFactorCS.hlsl  TessellatorCS40_NumVerticesIndicesCS.hlsl  TessellatorCS40_ScatterIDCS.hlsl  TessellatorCS40_TessellateIndicesCS.hlsl  TessellatorCS40_TessellateVerticesCS.hlsl  TessellatorCS40_common.hlsl  TessellatorCS40_defines.h  WaitDlg.h  resource.h
BC6HBC7EncoderCS/: BC6HBC7EncoderCS.cpp  BC6HBC7EncoderCS_2012.sln  BC6HBC7EncoderCS_2012.vcxproj  BC6HBC7EncoderCS_2013.sln  BC6HBC7EncoderCS_2013.vcxproj  BC6HBC7EncoderCS_2015.sln  BC6HBC7EncoderCS_2015.vcxproj  BC6HBC7EncoderCS_2015.vcxproj.filters  BC6HBC7EncoderCS_2015_Win10.sln  BC6HBC7EncoderCS_2015_Win10.vcxproj  BC6HBC7EncoderCS_2017_Win10.sln  BC6HBC7EncoderCS_2017_Win10.vcxproj  BC6HBC7EncoderCS_2017_Win10.vcxproj.filters  BC6HBC7EncoderCS_2019_Win10.sln  BC6HBC7EncoderCS_2019_Win10.vcxproj  BC6HBC7EncoderCS_2019_Win10.vcxproj.filters  BC6HEncoderCS10.cpp  BC6HEncoderCS10.h  BC7EncoderCS10.cpp  BC7EncoderCS10.h  CMakeLists.txt  EncoderBase.cpp  EncoderBase.h  Readme.docx  packages.config  utils.cpp  utils.h
BasicCompute11/: BasicCompute11.cpp  BasicCompute11.hlsl  BasicCompute11_2012.sln  BasicCompute11_2012.vcxproj  BasicCompute11_2013.sln  BasicCompute11_2013.vcxproj  BasicCompute11_2015.sln  BasicCompute11_2015.vcxproj  BasicCompute11_2015_Win10.sln  BasicCompute11_2015_Win10.vcxproj  BasicCompute11_2015_Win10.vcxproj.filters  BasicCompute11_2017_Win10.sln  BasicCompute11_2017_Win10.vcxproj  BasicCompute11_2017_Win10.vcxproj.filters  BasicCompute11_2019_Win10.sln  BasicCompute11_2019_Win10.vcxproj  CMakeLists.txt  Readme.docx
BasicHLSL11/: BasicHLSL.fx  BasicHLSL11.cpp  BasicHLSL11_2012.sln  BasicHLSL11_2012.vcxproj  BasicHLSL11_2013.sln  BasicHLSL11_2013.vcxproj  BasicHLSL11_2013.vcxproj.filters  BasicHLSL11_2013_Win10.sln  BasicHLSL11_2013_Win10.vcxproj  BasicHLSL11_2013_Win10.vcxproj.filters  BasicHLSL11_2015.sln  BasicHLSL11_2015.vcxproj  BasicHLSL11_2015_Win10.sln  BasicHLSL11_2015_Win10.vcxproj  BasicHLSL11_2017_Win10.sln  BasicHLSL11_2017_Win10.vcxproj  BasicHLSL11_2019_Win10.sln  BasicHLSL11_2019_Win10.vcxproj  BasicHLSL11_2019_Win10.vcxproj.filters  BasicHLSL11_PS.hlsl  BasicHLSL11_VS.hlsl  CMakeLists.txt  Readme.docx
BasicHLSLFX11/: BasicHLSLFX11.cpp  BasicHLSLFX11.fx  BasicHLSLFX11_2012.sln  BasicHLSLFX11_2012.vcxproj  BasicHLSLFX11_2012.vcxproj.filters  BasicHLSLFX11_2013.sln  BasicHLSLFX11_2013.vcxproj  BasicHLSLFX11_2013_Win10.sln  BasicHLSLFX11_2013_Win10.vcxproj  BasicHLSLFX11_2015.sln  BasicHLSLFX11_2015.vcxproj  BasicHLSLFX11_2015_Win10.sln  BasicHLSLFX11_2015_Win10.vcxproj  BasicHLSLFX11_2017_Win10.sln  BasicHLSLFX11_2017_Win10.vcxproj  BasicHLSLFX11_2019_Win10.sln  BasicHLSLFX11_2019_Win10.vcxproj  BasicHLSLFX11_2019_Win10.vcxproj.filters  CMakeLists.txt  CMakePresets.json  Readme.docx
CascadedShadowMaps11/: CMakeLists.txt  CascadedShadowMaps11.cpp  CascadedShadowMaps11.rc  CascadedShadowMaps11_2012.sln  CascadedShadowMaps11_2012.vcxproj  CascadedShadowMaps11_2013.sln  CascadedShadowMaps11_2013.vcxproj  CascadedShadowMaps11_2013.vcxproj.filters  CascadedShadowMaps11_2015.sln  CascadedShadowMaps11_2015.vcxproj  CascadedShadowMaps11_2015_Win10.sln  CascadedShadowMaps11_2015_Win10.vcxproj  CascadedShadowMaps11_2017_Win10.sln  CascadedShadowMaps11_2017_Win10.vcxproj  CascadedShadowMaps11_2017_Win10.vcxproj.filters  CascadedShadowMaps11_2019_Win10.sln  CascadedShadowMaps11_2019_Win10.vcxproj  CascadedShadowsManager.cpp  CascadedShadowsManager.h  Readme.docx  RenderCascadeScene.hlsl  RenderCascadeShadow.hlsl  ShadowSampleMisc.h  resource.h
Collision/: CMakeLists.txt  Collision.cpp  Collision_Desktop_2012.sln  Collision_Desktop_2012.vcxproj  Collision_Desktop_2012.vcxproj.filters  Collision_Desktop_2013.sln  Collision_Desktop_2013.vcxproj  Collision_Desktop_2015.sln  Collision_Desktop_2015.vcxproj  Collision_Desktop_2015_Win10.sln  Collision_Desktop_2015_Win10.vcxproj  Collision_Desktop_2017_Win10.sln  Collision_Desktop_2017_Win10.vcxproj  Collision_Desktop_2017_Win10.vcxproj.filters  Collision_Desktop_2019_Win10.sln  Collision_Desktop_2019_Win10.vcxproj  Collision_Desktop_2019_Win10.vcxproj.filters  Readme.docx  packages.config  resource.h
ComputeShaderSort11/: CMakeLists.txt  ComputeShaderSort11.cpp  ComputeShaderSort11.hlsl  ComputeShaderSort11_2012.sln  ComputeShaderSort11_2012.vcxproj  ComputeShaderSort11_2013.sln  ComputeShaderSort11_2013.vcxproj  ComputeShaderSort11_2013.vcxproj.filters  ComputeShaderSort11_2015.sln  ComputeShaderSort11_2015.vcxproj  ComputeShaderSort11_2015_Win10.sln  ComputeShaderSort11_2015_Win10.vcxproj  ComputeShaderSort11_2017_Win10.sln  ComputeShaderSort11_2017_Win10.vcxproj  Readme.docx  (+3 more)
Direct3D11Tutorials/Tutorial02/: CMakeLists.txt  Resource.h  Tutorial02.cpp  Tutorial02.fx  Tutorial02.rc  Tutorial02_2012.vcxproj  Tutorial02_2013.vcxproj  Tutorial02_2013.vcxproj.filters  Tutorial02_2015.vcxproj  Tutorial02_2017.vcxproj  Tutorial02_2017.vcxproj.filters  Tutorial02_2019.vcxproj  Tutorial02_2019.vcxproj.filters  Tutorial02_VS.hlsl
(+1393 files in other folders)
